# reg_mailbox

./: .gitignore  .pre-commit-config.yaml  config_example.txt  deps  get_link.py  get_links.py  get_mail.py  get_mail_ctr.py  get_mail_ctr_copy.py  get_notes_from_d.py  main.py  move_something.py  pyproject.toml  register_despacho.py  send_mail.py  send_mail_ctr.py  syno_tools.py  synomail.py  test.py  tests.py
synomail/: __init__.py  get_mail.py  get_notes_from_d.py  register_despacho.py  send_mail.py  syno_tools.py  synomail.py  synomail_console.py
